# cliconf

./: .gitignore  README.md  pyproject.toml
cliconf/: __init__.py  configurer.py  file_manager.py  file_type.py  json_manager.py  pyproject.toml  yaml_manager.py
cliconf/cliconf/: configurer.py
tests/: test_configurer.py  test_json_manager.py  test_yaml_manager.py
